feat : balance summary
